--- a/profile.html
+++ b/profile.html
@@ -16,13 +16,14 @@
     </header>
 
     <div class="profile_container">
-        <div class="profile_pic_container">
-            <img src="svgs/user-svgrepo-com.png" class="profile_pic_main" alt="">
-        </div>
         <div class="profile_record">
-            <h1>Username:</h1>
+            <h1>Username:<?php include 'user_details.php';?></h1>
             <h1>Streak:</h1>
         </div>
+    </div>
+    <div>
+        <h1>Productivity</h1>
+
     </div>
 </body>
 </html>
